--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,3 +6,8 @@
     font-family: 'ethnocentric-rg';
     src: url('/fonts/ethnocentric-rg.otf') format('opentype');
 }
+
+.quill-editor .ql-editor {
+    font-size: 16px;
+    line-height: 1.6;
+  }
